# kirendering

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Claude.md  DECISIONS.md  LICENSE  README.md  ROADMAP.md  copilot_instructions.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/scripts/: benchmark_llm_speed.py  benchmark_solver.py  chat_ollama_smoke.py  check_blender_gpu.py  export_all.py  ingest_regulations.py  test_render_manual.py  visualize_solution.py
backend/src/cimiento/api/: README.md  dependencies.py  errors.py  i18n.py  jobs.py  main.py  schemas.py
backend/src/cimiento/bim/: README.md  __init__.py  dxf_exporter.py  ifc_exporter.py  xlsx_reporter.py
backend/src/cimiento/core/: README.md  config.py
backend/src/cimiento/diffusion/: __init__.py  pipeline.py  preprocessors.py
backend/src/cimiento/geometry/: README.md  __init__.py  builder.py
backend/src/cimiento/llm/: README.md  __init__.py  client.py  (+1 more)
backend/tests/fixtures/: programs.py  solares.py  valid_cases.py
backend/tests/integration/: test_api_endpoints.py  test_exports.py  test_hardware_benchmark.py  test_ifc_export.py
backend/tests/unit/: test_api_main.py  test_architectural_schemas.py  test_blender_compat.py  test_builder.py  test_check_blender_gpu.py  test_diffusion_pipeline.py  test_llm_tools.py  test_ollama_client.py  test_parking_solver.py  test_project_repository.py  test_render_manual_script.py  test_render_pipeline.py  test_schemas.py  test_solver_basic.py  test_vision_interpreter.py  test_vision_preprocessing.py  test_vision_router.py
(+180 files in other folders)
